# robot_ws

./: .rosinstall  .rosinstall.bak  README.md
A-LOAM/: CMakeLists.txt
A-LOAM/launch/: kitti_helper.launch
A-LOAM/src/: laserMapping.cpp  laserOdometry.cpp
Azure_Kinect_ROS_Driver/launch/: driver.launch
cam_lidar_calibration-master/: CMakeLists.txt
cam_lidar_calibration-master/cfg/: camera_info.yaml  params.yaml
cam_lidar_calibration-master/data/2024-11-05_18-42-53/: calibration_2024-11-05_19-02-12.csv  poses.csv
cam_lidar_calibration-master/data/2024-11-05_18-42-53/pcd/: pose10_full.pcd  pose10_target.pcd  pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd  pose6_full.pcd  pose6_target.pcd  pose7_full.pcd  pose7_target.pcd  pose8_full.pcd  pose8_target.pcd  pose9_full.pcd  pose9_target.pcd
cam_lidar_calibration-master/data/2024-11-06_09-20-19/: calibration_2024-11-06_09-57-20.csv  poses.csv
cam_lidar_calibration-master/data/2024-11-06_09-20-19/pcd/: pose10_full.pcd  pose10_target.pcd  pose11_full.pcd  pose11_target.pcd  pose12_full.pcd  pose12_target.pcd  pose13_full.pcd  pose13_target.pcd  pose14_full.pcd  pose14_target.pcd  pose15_full.pcd  pose15_target.pcd  pose16_full.pcd  pose16_target.pcd  pose17_full.pcd  pose17_target.pcd  pose18_full.pcd  pose18_target.pcd  pose19_full.pcd  pose19_target.pcd  pose1_full.pcd  pose1_target.pcd  pose20_full.pcd  pose20_target.pcd  pose21_full.pcd  pose21_target.pcd  pose22_full.pcd  pose22_target.pcd  pose23_full.pcd  pose23_target.pcd  pose24_full.pcd  pose24_target.pcd  pose25_full.pcd  pose25_target.pcd  pose26_full.pcd  pose26_target.pcd  pose27_full.pcd  pose27_target.pcd  pose28_full.pcd  pose28_target.pcd  (+20 more)
cam_lidar_calibration-master/data/2024-12-04_18-27-35/: calibration_2024-12-04_18-46-58.csv  poses.csv
cam_lidar_calibration-master/data/2024-12-06_13-18-02/: calibration_2024-12-06_13-36-06.csv  poses.csv
cam_lidar_calibration-master/data/2024-12-10_12-23-55/: calibration_2024-12-10_12-26-47.csv  poses.csv
cam_lidar_calibration-master/data/vlp/: calibration_2024-11-04_10-11-08.csv  calibration_2024-11-27_16-52-47.csv
cam_lidar_calibration-master/include/cam_lidar_calibration/: optimiser.h
cam_lidar_calibration-master/rviz/: cam_lidar_calibration.rviz
diff_driver/: CMakeLists.txt  package.xml
diff_driver/launch/: diff_driver.launch  link_transform.launch  target_kinect.launch  velodyne_rgb.launch
diff_driver/scripts/: diff_driver_node.py  keyboard.py  link_transform_node.py  target_detection_node.py  target_follow_node  target_follow_node.py
hector_slam/hector_mapping/launch/: mapping_default.launch
hector_slam/hector_slam_launch/launch/: rs32.launch
lego_loam/LeGO-LOAM/: CMakeLists.txt
lego_loam/LeGO-LOAM/include/: utility.h
lego_loam/LeGO-LOAM/launch/: lego.launch  run2.launch
lego_loam/LeGO-LOAM/pcd_files/: cornerMap.pcd  finalCloud.pcd  surfaceMap.pcd  trajectory.pcd
lego_loam/LeGO-LOAM/src/: mapOptmization.cpp
pointcloud_to_laserscan/launch/: point_to_scan.launch
pointpillars_ros/launch/: pointpillars.launch
pointpillars_ros/tools/: demo.py  ros.py
pointpillars_ros/tools/pcdet/: config.py  version.py
rs_to_velodyne/launch/: rs_to_velodyne.launch
rs_to_velodyne/src/: rs_to_velodyne.cpp
rslidar_sdk/config/: config.yaml
rslidar_sdk/launch/: hector.launch  lego.launch  rsandkinect.launch  rstoscan.launch  rstove.launch  start.launch  start2.launch
sync_timestamp/: CMakeLists.txt  package.xml
sync_timestamp/launch/: sync_timestamp.launch
sync_timestamp/src/: sync_timestamp_node.cpp
sys_time/: CMakeLists.txt  package.xml
sys_time/include/sys_time/: sys_time.h
sys_time/launch/: sys_time.launch
sys_time/scripts/: imu_lidar.py  sysbag.py
sys_time/src/: sys_time.cpp
(+131 files in other folders)
